--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,23 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.springdoc</groupId>
+		    <artifactId>springdoc-openapi-ui</artifactId>
+		    <version>1.5.10</version>
+		</dependency>
+		
+		<dependency>
+	    <groupId>org.junit.vintage</groupId>
+	    <artifactId>junit-vintage-engine</artifactId>
+	    <scope>test</scope>
+	    <exclusions>
+	        <exclusion>
+	            <groupId>org.hamcrest</groupId>
+	            <artifactId>hamcrest-core</artifactId>
+	        </exclusion>
+	    </exclusions>
+</dependency>
 	</dependencies>
 
 	<build>
